# FrysEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json
ExampleGame/: CMakeLists.txt  main.cpp
FrysEngine/: CMakeLists.txt  FrysEngine.cpp  FrysEngine.h
FrysEngineLibrary/: CMakeLists.txt  FrysEngine.cpp  FrysEngine.h
